--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
     - name: Install Dependencies
       run: |
+        ls
+        ls ..
+        ls $GITHUB_WORKSPACE
         sudo apt-get update
         sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3
         mkdir -p $GITHUB_WORKSPACE/toolchains
@@ -28,7 +31,7 @@ jobs:
     - name: Copy Kernel Config
       run: |
         cd kernel
-        cp ../config-sukisu .config
+        cp $GITHUB_WORKSPACE/config-sukisu .config
 
     - name: Build
       run: |
