--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3
         mkdir -p $GITHUB_WORKSPACE/toolchains
 
-    - name: Install Toolchains
+    - name: Download Toolchains
       run: |
         cd $GITHUB_WORKSPACE/toolchains
         git clone --depth 1 -b main https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86 clang
@@ -41,6 +41,7 @@ jobs:
         export PATH=$CLANG_BIN:$GCC64_BIN:$GCC32_BIN:$PATH
         rm -rf drivers/kernelsu
         curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s main
+        make -j$(nproc --all) O=out ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-android- LLVM=1 LLVM_IAS=1 olddefconfig
         
         make -j$(nproc --all) O=out \
           ARCH=arm64 \
