--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,12 @@ jobs:
           OBJCOPY=llvm-objcopy \
           OBJDUMP=llvm-objdump \
           STRIP=llvm-strip \
-          LD=ld.lld
+          LD=ld.lld \
+          Image.gz-dtb dtbo.img
 
     - name: Pack with AnyKernel
       run: |
-        git clone --depth 1 https://github.com/osm0sis/AnyKernel3.git
+        git clone --depth 1 https://github.com/qqdasb/AnyKernel3.git
         if [ -f kernel/out/arch/arm64/boot/Image.gz-dtb ]; then
           cp kernel/out/arch/arm64/boot/Image.gz-dtb AnyKernel3/
         else
@@ -67,11 +68,6 @@ jobs:
         fi
         
         cd AnyKernel3
-        sed -i 's/device.name1=maguro/device.name1=raphael/g' anykernel.sh
-        sed -i 's/device.name2=toro/device.name2=raphaelin/g' anykernel.sh
-        sed -i 's/device.name3=toroplus/device.name3=mi9tpro/g' anykernel.sh
-        sed -i 's/device.name4=tuna/device.name4=/g' anykernel.sh
-        sed -i 's|block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot|block=/dev/block/bootdevice/by-name/boot|g' anykernel.sh
         zip -r ../Kernel.zip *
 
     - name: Upload
