--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,8 @@ jobs:
     steps:
     - name: Install Dependencies
       run: |
-        printenv | wc -c
-        getconf ARG_MAX
         sudo apt-get update
-        sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3 git-lfs
+        sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3 git-lfs strace
         mkdir -p $GITHUB_WORKSPACE/toolchains
 
     - name: Download Toolchains
@@ -39,6 +37,7 @@ jobs:
         cp ../crdroid-kernel-raphael-lxc/config out/.config
 
     - name: Build
+      continue-on-error: true
       run: |
         CLANG_BIN=$GITHUB_WORKSPACE/toolchains/clang/bin
         GCC64_BIN=$GITHUB_WORKSPACE/toolchains/gcc64/bin
@@ -46,6 +45,7 @@ jobs:
         export PATH=$CLANG_BIN:$GCC64_BIN:$GCC32_BIN:$PATH
         
         cd kernel
+        strace -f -e execve -o /tmp/strace.log \
         make -j$(nproc --all) O=out \
           ARCH=arm64 \
           CC=clang \
@@ -68,6 +68,12 @@ jobs:
         
         cd AnyKernel3
         zip -r ../Kernel.zip *
+
+    - name: Upload Log
+      uses: actions/upload-artifact@v4
+      with:
+        name: log
+        path: /tmp/strace.log
 
     - name: Upload
       uses: actions/upload-artifact@v4
