--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3 git-lfs
+        sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3 git-lfs pkg-config
         mkdir -p $GITHUB_WORKSPACE/toolchains
 
     - name: Download Toolchains
@@ -43,21 +43,7 @@ jobs:
         GCC32_BIN=$GITHUB_WORKSPACE/toolchains/gcc32/bin
         
         cd kernel
-        export PATH=$CLANG_BIN:$GCC64_BIN:$GCC32_BIN:$PATH
-        make -j$(nproc --all) O=out \
-          ARCH=arm64 \
-          CC=clang \
-          CLANG_TRIPLE=aarch64-linux-gnu- \
-          CROSS_COMPILE=aarch64-linux-android- \
-          CROSS_COMPILE_ARM32=arm-linux-androideabi- \
-          LLVM=1 \
-          LLVM_IAS=1 \
-          NM=llvm-nm \
-          OBJCOPY=llvm-objcopy \
-          OBJDUMP=llvm-objdump \
-          STRIP=llvm-strip \
-          LD=ld.lld \
-          scripts_dtc
+        make -j$(nproc --all) -C scripts/dtc
         export PATH=$CLANG_BIN:$GCC64_BIN:$GCC32_BIN:$PWD/scripts/dtc:$PATH
         make -j$(nproc --all) O=out \
           ARCH=arm64 \
