--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y bc bison build-essential flex g++-multilib gcc-multilib git gnupg gperf lib32readline-dev lib32z1-dev liblz4-tool libncurses6 libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev python3 git-lfs pkg-config
-        sudo apt-get autopurge -y device-tree-compiler
         mkdir -p $GITHUB_WORKSPACE/toolchains
 
     - name: Download Toolchains
@@ -59,7 +58,8 @@ jobs:
           STRIP=llvm-strip \
           LD=ld.lld \
           scripts
-        export PATH=$CLANG_BIN:$GCC64_BIN:$GCC32_BIN:$PWD/scripts/dtc:$PATH
+        sudo cp scripts/dtc/dtc /usr/bin
+        scripts/dtc/dtc --version
         make -j$(nproc --all) O=out \
           ARCH=arm64 \
           CC=clang \
